made swagger on all routes
