# src/backend/app/controller/StoreController.js
@@ -1,32 +1,52 @@
-import * as Yup from 'yup';
 import Store from '../model/Store'
 
 class StoreController{
   async postStore(req, res) {
-  /* 	
+
+  /*
     #swagger.tags = ['Store']
-    #swagger.description = 'Cria uma nova loja' 
+    #swagger.description = 'Cria uma nova loja'
   */
+
+  /* #swagger.parameters['Store'] = {
+      in: 'body',
+      description: 'Informações da Loja',
+      required: true,
+      schema: {
+          "name": "Loja São Joaquim",
+          "contact": "(11)1111-1111",
+          "postal_code": "14402-000",
+          "state": "SP",
+          "city": "Franca",
+          "district": "São Joaquim",
+          "address": "Rua São Jose",
+          "number": "1010",
+          "complement": ""
+      }
+    }
+  */
+
     const storeExists = await Store.findOne({
-       where: { 
-         name: req.body.name 
+       where: {
+         name: req.body.name
         }
       });
 
     if(storeExists){
-      return res.status(401).json({ message: 'Loja já cadastrada em nossa base' })
+      return res.status(409).json('Loja já cadastrada');
     };
 
     const { id, name, contact, postal_code, state, city, district, address, number, complement } = await Store.create(req.body);
-    return res.json({id, name, contact, postal_code, state, city, district, address, number, complement});
+    return res.status(201).json({id, name, contact, postal_code, state, city, district, address, number, complement});
   };
 
   async getAllStores(req, res){
 
-  /* 	
+  /*
     #swagger.tags = ['Store']
-    #swagger.description = 'Cria uma nova loja' 
+    #swagger.description = 'Lista as lojas físicas'
   */
+
    const isStore = await Store.findAll()
    return res.status(200).json(isStore);
   };
@@ -34,10 +54,12 @@ class StoreController{
 
 
   async getStoreById(req, res) {
-      /* 	
+
+  /*
     #swagger.tags = ['Store']
-    #swagger.description = 'Cria uma nova loja' 
+    #swagger.description = 'Lista uma loja pelo ID'
   */
+
     const { id } = req.params;
 
     const isStoreId = await Store.findOne({
@@ -46,8 +68,9 @@ class StoreController{
       },
       attributes: { exclude: ['createdAt', 'updatedAt'] },
     })
+
     if(!isStoreId){
-      return res.status(400).json({
+      return res.status(404).json({
         message: "Store doesn't exists!"
       })
     }
